--- a/css/main.scss
+++ b/css/main.scss
@@ -2,12 +2,27 @@
 /* VARIABLES */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;900&display=swap');
 
+$desktop: 840px;
+$tablet: 666px;
+
+@mixin desktop {
+    @media (min-width: #{$desktop}){
+        @content;
+    }
+}
+@mixin tablet {
+    @media (min-width: #{$tablet}){
+        @content;
+    }
+}
+
 $pink:#F7CDDA;
 $gray:#EFF1EF;
 $hotpink:#F277A8;
 $black:#121212;
 $white:#E0E5EC;
 $morphshad: 9px 9px 16px rgba(163,177,198,0.6),-9px -9px 16px rgba(255,255,255,0.5);
+$box: 
 
 *{
   font: 16px/26px 'Montserrat', sans-serif;
@@ -46,17 +61,14 @@ svg,
 video {
     vertical-align: middle;
 }
-
 fieldset {
     border: 0;
     margin: 0;
     padding: 0;
 }
-
 textarea {
     resize: vertical;
 }
-
 footer{
   background-color: $black;
   width: 100%;
@@ -64,38 +76,30 @@ footer{
   color: $white;
   padding: 20px 0;
 }
-
 .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
 }
-
-
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
    ========================================================================== */
-
 body {
     font: 16px/26px 'Montserrat', sans-serif;
 }
-
 .wrapper {
     width: 90%;
     margin: 0 5%;
 }
-
 /* ==============
     MOBILE: Menu
    ============== */
-
 nav ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
-
 nav a {
     display: block;
     margin-bottom: 10px;
@@ -108,16 +112,13 @@ nav a {
     color: $white;
     background: #e44d26;
 }
-
 nav a:hover,
 nav a:visited {
     color: $white;
 }
-
 nav a:hover {
     text-decoration: underline;
 }
-
 /* ==============
     MOBILE: Main
    ============== */
@@ -125,97 +126,89 @@ nav a:hover {
 .main {
     padding: 30px 0;
 }
-
 .main article h1 {
     font-size: 2em;
 }
-
 .main aside {
     color: $white;
     padding: 0px 5% 10px;
 }
-
-/* .footer-container footer {
-
-} */
-
-
 /* ===============
     ALL: IE Fixes
    =============== */
-
 .ie7 .title {
     padding-top: 20px;
 }
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-   section{
-     display: flex;
-     flex-wrap: wrap;
-   }
-   button{
-     border-radius: 25px;
-     background-color: $white;
-     box-shadow: $morphshad;
-     padding: 10px 30px;
-     margin: 2em;
-     border: none;
-     color: $hotpink;
-     transition: 0.16s ease-in-out;
-   }
-   button:hover{
-     transform: scale(1.2);
-     font-weight: 600;
-   }
-   header{
-        height:100vh;
-        background-image: url(/img/header_bg.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center bottom;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding:0 15%;
+section{
+    display: flex;
+    flex-wrap: wrap;
+}
+button{
+    border-radius: 25px;
+    background-color: $white;
+    box-shadow: $morphshad;
+    padding: 10px 30px;
+    margin: 2em;
+    border: none;
+    color: $hotpink;
+    transition: 0.16s ease-in-out;
+}
+button:hover{
+    transform: scale(1.2);
+    font-weight: 600;
+}
+header{
+    height:100vh;
+    background-image: url(/img/header_bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:0 15%;
 
-        h1{
-            font-size: 3em;
-            font-weight: 600;
-        }
-        p{
-            max-width: 500px;
-            font-weight: 200;
-            text-align: center;
-        }
-   }
-   .imagefiller{
+    h1{
+        font-size: 3em;
+        font-weight: 600;
+    }
+    p{
+        max-width: 500px;
+        font-weight: 200;
+        text-align: center;
+    }
+
+}
+.imagefiller{
     background-image: url(/img/image_two.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center right;
-  }
-   .cajaP{
-     background-color: $pink;
-   }
-   .cajaG{
-     background-color: $white;
-   }
-   .cajaP, .cajaG{
-     display: flex;
-     position: relative;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-     width: 50%;
+}
+.cajaP{
+    background-color: $pink;
+}
+.cajaG{
+    background-color: $white;
+}
+.cajaP, .cajaG{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
 
-     &:before {
+
+    &:before {
         content: "";
         display: block;
-        padding-bottom: 100%
-     }
+        padding-bottom: 100%;
+    }
     .caja-inner{
         position: absolute;
         width: 100%;
@@ -229,7 +222,7 @@ nav a:hover {
             width: 50%;
             min-width: 300px;
             min-height: 300px;
-            box-shadow: $morphshad;
+            // box-shadow: $morphshad;
             border-radius: 25px;
         }
         h3{
@@ -240,13 +233,11 @@ nav a:hover {
             margin:0 5vw;
         }    
     }
-     
-   }
+}
 
-
-   .textbox{
-     padding: 1em;
-   }
+.textbox{
+    padding: 1em;
+}
 
 
 
