--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,20 @@ footer {
   width: 100%;
   margin: 0;
   color: #E0E5EC;
-  padding: 20px 0;
+  padding: 30px 0;
+  text-align: center;
+}
+
+footer a {
+  color: #F277A8;
+  font-weight: 600;
+  font-size: 1.1em;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .browserupgrade {
@@ -380,7 +393,7 @@ header p {
   height: 100vh;
   display: flex;
   position: relative;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -389,6 +402,12 @@ header p {
 
 #contact h2 {
   text-align: center;
+  font-size: 3em;
+  font-weight: 600;
+  clear: both;
+  margin: 30px auto;
+  width: 100%;
+  line-height: 1em;
 }
 
 #contact button {
