--- a/css/main.scss
+++ b/css/main.scss
@@ -70,7 +70,7 @@ textarea {
     resize: vertical;
 }
 footer{
-  background-color: $black;
+  background-color: #222;
   width: 100%;
   margin: 0;
   color: $white;
