--- a/css/main.scss
+++ b/css/main.scss
@@ -262,165 +262,28 @@ header{
     }
 }
 
-
 .textbox{
     padding: 1em;
 }
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 480px) {
-
-/* ====================
-    INTERMEDIATE: Menu
-   ==================== */
-
-    nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
-    }
-
-    nav li:first-child a {
-        margin-left: 0;
-    }
-
-    nav li:last-child a {
-        margin-right: 0;
-    }
-
-/* ========================
-    INTERMEDIATE: IE Fixes
-   ======================== */
-
-    nav ul li {
-        display: inline;
-    }
-
-    .oldie nav a {
-        margin: 0 0.7%;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-
-/* ====================
-    WIDE: CSS3 Effects
-   ==================== */
-
-    .header-container,
-    .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
-    }
-
-/* ============
-    WIDE: Menu
-   ============ */
-
-    .title {
-        float: left;
-    }
-
-    nav {
-        float: right;
-        width: 38%;
-    }
-
-/* ============
-    WIDE: Main
-   ============ */
-
-    .main article {
-        float: left;
-        width: 57%;
-    }
-
-    .main aside {
-        float: right;
-        width: 28%;
-    }
-}
-
-@media only screen and (min-width: 1140px) {
-
-/* ===============
-    Maximal Width
-   =============== */
-
-    .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
-        margin: 0 auto;
-    }
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-.invisible {
-    visibility: hidden;
-}
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-.clearfix:after {
-    clear: both;
-}
-.clearfix {
-    *zoom: 1;
-}
-
 
 /* MAUTIC FORM STYLE */
 #contact{
     background-image: url(/img/form_bg.jpg);
     background-position: center bottom;
     background-size: cover;
-    height: 100vh;
+    background-repeat: no-repeat;
+    min-height: 100vh;
     display: flex;
     position: relative;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding:10vw;
+    padding:5vw;
 
     h2{
         text-align: center;
-        font-size: 3em;
+        font-size: 2.5em;
         font-weight: 600;
         clear:both;
         margin: 30px auto;
@@ -441,6 +304,35 @@ header{
         transform: scale(1.2);
         font-weight: 600;
     }
+    form{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+        input, 
+        textarea{
+            box-shadow: $morphshad;
+            border-radius: 25px;
+            width: 100%; 
+            padding: 0.5em 0.5em; 
+            margin: 20px 0;
+            border: none; 
+            background: $white; 
+            box-sizing: border-box; 
+            // color: green;
+
+            &::after{
+                content:"";
+                width:100%;
+                background-color: #222;
+                stroke: 1px solid;
+                height:1px;
+            }
+        }
+    }
 }
 
 .mauticform-error { 
@@ -451,21 +343,21 @@ header{
     margin-bottom: 10px;
     color: green; 
 }
-.mauticform-row { 
-    display: block; 
-    margin-bottom: 20px; 
-}
-.mauticform-label { 
-    font-size: 1.1em; 
-    display: block; 
-    font-weight: bold; 
-    margin-bottom: 5px; 
-}
-.mauticform-row.mauticform-required .mauticform-label:after { 
-    color: #e32; 
-    content: " *"; 
-    display: inline; 
-}
+// .mauticform-row { 
+//     display: block; 
+//     margin-bottom: 20px; 
+// }
+// .mauticform-label { 
+//     font-size: 1.1em; 
+//     display: block; 
+//     font-weight: bold; 
+//     margin-bottom: 5px; 
+// }
+// .mauticform-row.mauticform-required .mauticform-label:after { 
+//     color: #e32; 
+//     content: " *"; 
+//     display: inline; 
+// }
 .mauticform-helpmessage { 
     display: block; 
     font-size: 0.9em; 
@@ -476,59 +368,59 @@ header{
     color: red; 
     margin-top: 2px; 
 }
-.mauticform-selectbox, 
-.mauticform-input, 
-.mauticform-textarea { 
-    width: 100%; 
-    padding: 0.5em 0.5em; 
-    border: 1px solid #CCC; 
-    background: #fff; 
-    box-shadow: 0px 0px 0px #fff inset; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
-}
-.mauticform-checkboxgrp-label { 
-    font-weight: normal; 
-}
-.mauticform-radiogrp-label { 
-    font-weight: normal; 
-}
-.mauticform-button-wrapper .mauticform-button.btn-default, 
-.mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default { 
-    color: #5d6c7c;
-    background-color: #ffffff;
-    border-color: #dddddd;
-}
-.mauticform-button-wrapper .mauticform-button, 
-.mauticform-pagebreak-wrapper .mauticform-pagebreak { 
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: 600;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    padding: 6px 12px;
-    font-size: 13px;
-    line-height: 1.3856;
-    border-radius: 3px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.mauticform-button-wrapper .mauticform-button.btn-default[disabled], 
-.mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] { 
-    background-color: #ffffff; 
-    border-color: #dddddd; 
-    opacity: 0.75; 
-    cursor: not-allowed; 
-}
-.mauticform-pagebreak-wrapper .mauticform-button-wrapper {  
-    display: inline; 
-}
+// .mauticform-selectbox, 
+// .mauticform-input, 
+// .mauticform-textarea { 
+//     width: 100%; 
+//     padding: 0.5em 0.5em; 
+//     border: 1px solid #CCC; 
+//     background: #fff; 
+//     box-shadow: 0px 0px 0px #fff inset; 
+//     border-radius: 4px; 
+//     box-sizing: border-box; 
+// }
+// .mauticform-checkboxgrp-label { 
+//     font-weight: normal; 
+// }
+// .mauticform-radiogrp-label { 
+//     font-weight: normal; 
+// }
+// .mauticform-button-wrapper .mauticform-button.btn-default, 
+// .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default { 
+//     color: #5d6c7c;
+//     background-color: #ffffff;
+//     border-color: #dddddd;
+// }
+// .mauticform-button-wrapper .mauticform-button, 
+// .mauticform-pagebreak-wrapper .mauticform-pagebreak { 
+//     display: inline-block;
+//     margin-bottom: 0;
+//     font-weight: 600;
+//     text-align: center;
+//     vertical-align: middle;
+//     cursor: pointer;
+//     background-image: none;
+//     border: 1px solid transparent;
+//     white-space: nowrap;
+//     padding: 6px 12px;
+//     font-size: 13px;
+//     line-height: 1.3856;
+//     border-radius: 3px;
+//     -webkit-user-select: none;
+//     -moz-user-select: none;
+//     -ms-user-select: none;
+//     user-select: none;
+// }
+// .mauticform-button-wrapper .mauticform-button.btn-default[disabled], 
+// .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] { 
+//     background-color: #ffffff; 
+//     border-color: #dddddd; 
+//     opacity: 0.75; 
+//     cursor: not-allowed; 
+// }
+// .mauticform-pagebreak-wrapper .mauticform-button-wrapper {  
+//     display: inline; 
+// }
 
 
 
@@ -596,3 +488,141 @@ header{
         page-break-after: avoid;
     }
 }
+
+
+
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
+
+   @media only screen and (min-width: 480px) {
+
+    /* ====================
+        INTERMEDIATE: Menu
+       ==================== */
+    
+        nav a {
+            float: left;
+            width: 27%;
+            margin: 0 1.7%;
+            padding: 25px 2%;
+            margin-bottom: 0;
+        }
+    
+        nav li:first-child a {
+            margin-left: 0;
+        }
+    
+        nav li:last-child a {
+            margin-right: 0;
+        }
+    
+    /* ========================
+        INTERMEDIATE: IE Fixes
+       ======================== */
+    
+        nav ul li {
+            display: inline;
+        }
+    
+        .oldie nav a {
+            margin: 0 0.7%;
+        }
+    }
+    
+    @media only screen and (min-width: 768px) {
+    
+    /* ====================
+        WIDE: CSS3 Effects
+       ==================== */
+    
+        .header-container,
+        .main aside {
+            -webkit-box-shadow: 0 5px 10px #aaa;
+               -moz-box-shadow: 0 5px 10px #aaa;
+                    box-shadow: 0 5px 10px #aaa;
+        }
+    
+    /* ============
+        WIDE: Menu
+       ============ */
+    
+        .title {
+            float: left;
+        }
+    
+        nav {
+            float: right;
+            width: 38%;
+        }
+    
+    /* ============
+        WIDE: Main
+       ============ */
+    
+        .main article {
+            float: left;
+            width: 57%;
+        }
+    
+        .main aside {
+            float: right;
+            width: 28%;
+        }
+    }
+    
+    @media only screen and (min-width: 1140px) {
+    
+    /* ===============
+        Maximal Width
+       =============== */
+    
+        .wrapper {
+            width: 1026px; /* 1140px - 10% for margins */
+            margin: 0 auto;
+        }
+    }
+    
+    /* ==========================================================================
+       Helper classes
+       ========================================================================== */
+    
+    .hidden {
+        display: none !important;
+        visibility: hidden;
+    }
+    .visuallyhidden {
+        border: 0;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+    }
+    .visuallyhidden.focusable:active,
+    .visuallyhidden.focusable:focus {
+        clip: auto;
+        height: auto;
+        margin: 0;
+        overflow: visible;
+        position: static;
+        width: auto;
+    }
+    .invisible {
+        visibility: hidden;
+    }
+    .clearfix:before,
+    .clearfix:after {
+        content: " ";
+        display: table;
+    }
+    .clearfix:after {
+        clear: both;
+    }
+    .clearfix {
+        *zoom: 1;
+    }
+    
+    
