--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,28 @@ header p {
   height: 1px;
 }
 
+.mauticform-error {
+  margin-bottom: 10px;
+  color: red;
+}
+
+.mauticform-message {
+  margin-bottom: 10px;
+  color: green;
+}
+
+.mauticform-helpmessage {
+  display: block;
+  font-size: 0.9em;
+  margin-bottom: 3px;
+}
+
+.mauticform-errormsg {
+  display: block;
+  color: red;
+  margin-top: 2px;
+}
+
 /* ==========================================================================
    Print styles
    ========================================================================== */
