--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ $tablet: 666px;
 
 $pink:#F7CDDA;
 $gray:#EFF1EF;
+$darkgray: #8e8e8e;
 $hotpink:#F277A8;
 $black:#121212;
 $white:#E0E5EC;
@@ -276,10 +277,11 @@ header{
     display: flex;
     position: relative;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
     text-align: center;
-    padding:5vw;
+    padding: 5vw;
+
 
     h2{
         text-align: center;
@@ -290,47 +292,91 @@ header{
         width: 100%;
         line-height: 1em;
     }
-    button{
-        border-radius: 25px;
-        background-color: $white;
-        box-shadow: $morphshad;
-        padding: 10px 30px;
-        margin: 2em;
-        border: none;
-        color: $hotpink;
-        transition: 0.16s ease-in-out;
-    }
-    button:hover{
-        transform: scale(1.2);
-        font-weight: 600;
-    }
+ 
+
     form{
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        
+        max-width: 1180px;
+
+        .inner-form{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            align-items: center;
+            text-align: center;
+
+            div{
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+                align-items: center;
+                text-align: center;
+
+                div{
+                    width:100%; 
+                    max-width: 500px;           
+                    display: flex;
+                    flex-direction: column;
+                    flex-wrap: wrap;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    text-align: center;
+                }
+            }
+        }
+
+
         input, 
         textarea{
-            box-shadow: $morphshad;
-            border-radius: 25px;
-            width: 100%; 
-            padding: 0.5em 0.5em; 
-            margin: 20px 0;
             border: none; 
-            background: $white; 
-            box-sizing: border-box; 
-            // color: green;
+            border-bottom: 2px solid $hotpink;
+            width: 100%; 
+            max-width: 500px;
+            min-width: 300px;
+            padding: 0 0 8px 4px;
+            margin: 20px auto;
+            background: transparent; 
+            font-size: 1.6em;
+            outline: none;
 
-            &::after{
-                content:"";
-                width:100%;
-                background-color: #222;
-                stroke: 1px solid;
-                height:1px;
+            &:focus{
+                color:$hotpink;
+                border-bottom: solid $hotpink 2px; 
             }
+
+            &:valid { 
+                border-bottom: solid $hotpink 2px; 
+                color:$hotpink;
+            }
+
+            &:invalid { 
+                border-bottom: solid $darkgray 2px; 
+                color:$darkgray;
+            }
+        }
+        #mauticform_pelumark_submit{
+            align-self: flex-end;
+            margin:30px auto;
+        }
+        
+        button{
+            border-radius: 50px;
+            background-color: $white;
+            box-shadow: $morphshad;
+            padding: 20px 60px;
+            margin: 2em;
+            border: none;
+            font-size: 1.7em;
+            color: $hotpink;
+            transition: 0.16s ease-in-out;
+        }
+        button:hover{
+            transform: scale(1.2);
+            font-weight: 600;
         }
     }
 }
@@ -343,21 +389,21 @@ header{
     margin-bottom: 10px;
     color: green; 
 }
-// .mauticform-row { 
-//     display: block; 
-//     margin-bottom: 20px; 
-// }
-// .mauticform-label { 
-//     font-size: 1.1em; 
-//     display: block; 
-//     font-weight: bold; 
-//     margin-bottom: 5px; 
-// }
-// .mauticform-row.mauticform-required .mauticform-label:after { 
-//     color: #e32; 
-//     content: " *"; 
-//     display: inline; 
-// }
+.mauticform-row { 
+    display: block; 
+    margin-bottom: 20px; 
+}
+.mauticform-label { 
+    font-size: 1.1em; 
+    display: block; 
+    font-weight: bold; 
+    margin-bottom: 5px; 
+}
+.mauticform-row.mauticform-required .mauticform-label:after { 
+    color: red; 
+    content: " *"; 
+    display: inline; 
+}
 .mauticform-helpmessage { 
     display: block; 
     font-size: 0.9em; 
@@ -368,60 +414,6 @@ header{
     color: red; 
     margin-top: 2px; 
 }
-// .mauticform-selectbox, 
-// .mauticform-input, 
-// .mauticform-textarea { 
-//     width: 100%; 
-//     padding: 0.5em 0.5em; 
-//     border: 1px solid #CCC; 
-//     background: #fff; 
-//     box-shadow: 0px 0px 0px #fff inset; 
-//     border-radius: 4px; 
-//     box-sizing: border-box; 
-// }
-// .mauticform-checkboxgrp-label { 
-//     font-weight: normal; 
-// }
-// .mauticform-radiogrp-label { 
-//     font-weight: normal; 
-// }
-// .mauticform-button-wrapper .mauticform-button.btn-default, 
-// .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default { 
-//     color: #5d6c7c;
-//     background-color: #ffffff;
-//     border-color: #dddddd;
-// }
-// .mauticform-button-wrapper .mauticform-button, 
-// .mauticform-pagebreak-wrapper .mauticform-pagebreak { 
-//     display: inline-block;
-//     margin-bottom: 0;
-//     font-weight: 600;
-//     text-align: center;
-//     vertical-align: middle;
-//     cursor: pointer;
-//     background-image: none;
-//     border: 1px solid transparent;
-//     white-space: nowrap;
-//     padding: 6px 12px;
-//     font-size: 13px;
-//     line-height: 1.3856;
-//     border-radius: 3px;
-//     -webkit-user-select: none;
-//     -moz-user-select: none;
-//     -ms-user-select: none;
-//     user-select: none;
-// }
-// .mauticform-button-wrapper .mauticform-button.btn-default[disabled], 
-// .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] { 
-//     background-color: #ffffff; 
-//     border-color: #dddddd; 
-//     opacity: 0.75; 
-//     cursor: not-allowed; 
-// }
-// .mauticform-pagebreak-wrapper .mauticform-button-wrapper {  
-//     display: inline; 
-// }
-
 
 
 
