--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,14 @@ header {
   padding: 0 15%;
 }
 
+header img {
+  width: 80vw;
+  max-width: 600px;
+  justify-self: flex-start;
+  top: 150px;
+  position: absolute;
+}
+
 header h1 {
   font-size: 3em;
   font-weight: 600;
@@ -304,7 +312,7 @@ header p {
   max-width: 500px;
   min-width: 300px;
   padding: 0 0 8px 4px;
-  margin: 20px auto;
+  margin: 30px auto;
   background: transparent;
   font-size: 1.6em;
   outline: none;
