--- a/css/main.scss
+++ b/css/main.scss
@@ -160,6 +160,13 @@ header{
     align-items: center;
     padding:0 15%;
 
+    img{
+        width: 80vw;
+        max-width: 600px;
+        justify-self: flex-start;
+        top: 150px;
+        position: absolute;    
+    }
     h1{
         font-size: 3em;
         font-weight: 600;
@@ -312,7 +319,7 @@ header{
             max-width: 500px;
             min-width: 300px;
             padding: 0 0 8px 4px;
-            margin: 20px auto;
+            margin: 30px auto;
             background: transparent; 
             font-size: 1.6em;
             outline: none;
