--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ header img {
   width: 80vw;
   max-width: 600px;
   justify-self: flex-start;
-  top: 150px;
+  top: 20vh;
   position: absolute;
 }
 
@@ -163,6 +163,7 @@ header h1 {
 }
 
 header p {
+  margin-top: 15vh;
   max-width: 500px;
   font-weight: 200;
   text-align: center;
