--- a/css/main.css
+++ b/css/main.css
@@ -345,7 +345,7 @@ header p {
 #contact form button {
   border-radius: 50px;
   background-color: #E0E5EC;
-  box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.6), -9px -9px 16px rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
   padding: 20px 60px;
   margin: 2em;
   border: none;
@@ -438,6 +438,7 @@ nav.goobutt .goobutt-item, nav.goobutt .goobutt-open-button {
   transition: -webkit-transform ease-out 200ms;
   transition: transform ease-out 200ms;
   transition: transform ease-out 200ms, -webkit-transform ease-out 200ms;
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
 
 nav.goobutt .goobutt-open {
