--- a/css/main.scss
+++ b/css/main.scss
@@ -254,7 +254,7 @@ header{
 
 /* MAUTIC FORM STYLE */
 #contact{
-    background-image: url(/img/form_bg.jpg);
+    background-image: url(/img/form_bg.webp);
     background-position: center bottom;
     background-size: cover;
     background-repeat: no-repeat;
