--- a/css/main.scss
+++ b/css/main.scss
@@ -402,6 +402,16 @@ header{
     margin-top: 2px; 
 }
 
+/* fade image in after load */
+.lazyload,
+.lazyloading {
+	opacity: 0;
+}
+.lazyloaded {
+	opacity: 1;
+	transition: opacity 300ms;
+}
+
 /******* GOOMENOO *****/
 
 nav.goobutt{
